# tdal3

./: .gitignore  2048-out.sym  Cargo.toml  LICENSE  test_pkg.js
src/: assemble.rs  bin.rs  lib.rs  opcode.rs  parser.rs
ui/: bun.lockb  package.json  vite.config.ts
ui/src/: App.tsx  index.tsx
